--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
-pygeocoder==1.2.5
+PyJWT==1.5.3
+PySocks==1.6.7
+pytz==2017.2
 requests==2.18.4
+six==1.11.0
+twilio==6.6.3
 urllib3==1.22
 Werkzeug==0.12.2
