--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
@@ -14,3 +15,4 @@ six==1.11.0
 twilio==6.6.3
 urllib3==1.22
 Werkzeug==0.12.2
+wikipedia==1.4.0
