--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 Flask==0.12.2
+Flask-Login==0.4.0
 Flask-SQLAlchemy==2.2
 idna==2.6
 itsdangerous==0.24
